--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "node": "16.9.1"
   },
   "scripts": {
-    "start": "node dist/index.js",
-    "postinstall": "tsc",
-    "watch-node": "nodemon dist/index.js",
-    "watch-ts": "tsc -w"
+    "start": "tsnd index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +19,6 @@
     "express-handlebars": "^6.0.2",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
-    "tsc": "^2.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
