--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "16.9.1"
   },
   "scripts": {
-    "start": "tsnd index.ts"
+    "start": "ts-node index.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,8 @@
     "express-handlebars": "^6.0.2",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ts-node": "^10.5.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -28,7 +29,6 @@
     "@types/method-override": "^0.0.32",
     "@types/node": "^17.0.21",
     "@types/uuid": "^8.3.4",
-    "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   }
